@@ -21,44 +21,44 @@ public final class PoolZombies extends ZombieType {
 	public static final ZombieType SNORKEL_ZOMBIE = new PoolZombies("snorkel_zombie", new ZombieFeatures()
 		    .rank(RankTypes.WHITE).xp(5)
 			.entityType(() -> EntityRegister.SNORKEL_ZOMBIE.get())
-			.zombieModel(() -> SnorkelZombieModel::new).scale(0.5F)
-			.eatCommonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new SnorkelZombieModel(SnorkelZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType ZOMBONI = new PoolZombies("zomboni", new ZombieFeatures()
 		    .rank(RankTypes.BLUE).xp(32)
 			.entityType(() -> EntityRegister.ZOMBONI.get())
-			.zombieModel(() -> ZomboniModel::new).scale(0.5F)
-			.commonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new ZomboniModel(ZomboniModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType BOBSLE_TEAM = new PoolZombies("bobsle_team", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(10)
 			.entityType(() -> EntityRegister.BOBSLE_TEAM.get())
-			.zombieModel(() -> BobsleTeamModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new BobsleTeamModel(BobsleTeamModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.BOBSLE_TEAM)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType BOBSLE_ZOMBIE = new PoolZombies("bobsle_zombie", new ZombieFeatures()
 		    .rank(RankTypes.WHITE).xp(2)
 			.entityType(() -> EntityRegister.BOBSLE_ZOMBIE.get())
-			.zombieModel(() -> BobsleZombieModel::new).scale(0.5F)
-			.eatCommonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new BobsleZombieModel(BobsleZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType DOLPHIN_RIDER = new PoolZombies("dolphin_rider", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(24)
 			.entityType(() -> EntityRegister.DOLPHIN_RIDER.get())
 			.scale(0.5F)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType DOLPHIN_RIDER_ZOMBIE = new PoolZombies("dolphin_rider_zombie", new ZombieFeatures()
 		    .rank(RankTypes.WHITE).xp(8)
 			.entityType(() -> EntityRegister.DOLPHIN_RIDER_ZOMBIE.get())
-			.zombieModel(() -> DolphinRiderZombieModel::new).scale(0.5F)
-			.eatCommonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new DolphinRiderZombieModel(DolphinRiderZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType ZOMBIE_DOLPHIN = new PoolZombies("zombie_dolphin", new ZombieFeatures()
@@ -66,45 +66,45 @@ public final class PoolZombies extends ZombieType {
 			.entityType(() -> EntityRegister.ZOMBIE_DOLPHIN.get())
 			.scale(0.5F)
 			.loot(PVZLoot.ZOMBIE_DOLPHIN)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType JACK_IN_BOX_ZOMBIE = new PoolZombies("jack_in_box_zombie", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(16)
 			.entityType(() -> EntityRegister.JACK_IN_BOX_ZOMBIE.get())
-			.zombieModel(() -> JackInBoxZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new JackInBoxZombieModel(JackInBoxZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.JACK_IN_BOX_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType BALLOON_ZOMBIE = new PoolZombies("balloon_zombie", new ZombieFeatures()
 		    .rank(RankTypes.BLUE).xp(10)
 			.entityType(() -> EntityRegister.BALLOON_ZOMBIE.get())
-			.zombieModel(() -> BalloonZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new BalloonZombieModel(BalloonZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.BALLOON_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType DIGGER_ZOMBIE = new PoolZombies("digger_zombie", new ZombieFeatures()
 		    .rank(RankTypes.BLUE).xp(20)
 			.entityType(() -> EntityRegister.DIGGER_ZOMBIE.get())
-			.zombieModel(() -> DiggerZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new DiggerZombieModel(DiggerZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.DIGGER_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType POGO_ZOMBIE = new PoolZombies("pogo_zombie", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(18)
 			.entityType(() -> EntityRegister.POGO_ZOMBIE.get())
-			.zombieModel(() -> PogoZombieModel::new).scale(0.5F)
-			.eatCommonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new PogoZombieModel(PogoZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType YETI_ZOMBIE = new PoolZombies("yeti_zombie", new ZombieFeatures()
 		    .rank(RankTypes.PURPLE).xp(36)
 			.entityType(() -> EntityRegister.YETI_ZOMBIE.get())
-			.zombieModel(() -> YetiZombieModel::new).scale(0.5F)
-			.eatCommonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new YetiZombieModel(YetiZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.eatCommonSkill(List.of())
 	);
 	
 	public static void register() {
