@@ -23,61 +23,61 @@ public final class RoofZombies extends ZombieType {
 			.entityType(() -> EntityRegister.BUNGEE_ZOMBIE.get())
 			.scale(0.5F)
 			.loot(PVZLoot.BUNGEE_ZOMBIE)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType LADDER_ZOMBIE = new RoofZombies("ladder_zombie", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(15)
 			.entityType(() -> EntityRegister.LADDER_ZOMBIE.get())
-			.zombieModel(() -> LadderZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new LadderZombieModel(LadderZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.LADDER_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType CATAPULT_ZOMBIE = new RoofZombies("catapult_zombie", new ZombieFeatures()
 		    .rank(RankTypes.BLUE).xp(32)
 			.entityType(() -> EntityRegister.CATAPULT_ZOMBIE.get())
-			.zombieModel(() -> CatapultZombieModel::new).scale(0.5F)
-			.commonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new CatapultZombieModel(CatapultZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType GARGANTUAR = new RoofZombies("gargantuar", new ZombieFeatures()
 		    .rank(RankTypes.PURPLE).xp(40)
 			.entityType(() -> EntityRegister.GARGANTUAR.get())
-			.zombieModel(() -> GargantuarModel::new).scale(0.75F)
+			.zombieModel(() -> () -> new GargantuarModel(GargantuarModel.createBodyLayer().bakeRoot())).scale(0.75F)
 			.loot(PVZLoot.GARGANTUAR)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType IMP = new RoofZombies("imp", new ZombieFeatures()
 		    .rank(RankTypes.GRAY).xp(2)
 			.entityType(() -> EntityRegister.IMP.get())
-			.zombieModel(() -> ImpModel::new).scale(0.5F)
-			.eatCommonSkill(Arrays.asList())
+			.zombieModel(() -> () -> new ImpModel(ImpModel.createBodyLayer().bakeRoot())).scale(0.5F)
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType GIGA_GARGANTUAR = new RoofZombies("giga_gargantuar", new ZombieFeatures()
 		    .rank(RankTypes.RED).xp(55)
 			.entityType(() -> EntityRegister.GIGA_GARGANTUAR.get())
-			.zombieModel(() -> GargantuarModel::new).scale(0.8F)
+			.zombieModel(() -> () -> new GargantuarModel(GargantuarModel.createBodyLayer().bakeRoot())).scale(0.8F)
 			.loot(PVZLoot.GIGA_GARGANTUAR)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 	
 	public static final ZombieType EDGAR_090505 = new RoofZombies("edgar_090505", new ZombieFeatures()
 		    .rank(RankTypes.MEGA).xp(1000)
 			.entityType(() -> EntityRegister.EDGAR_090505.get())
-			.zombieModel(() -> EdgarRobotModel::new).scale(1.6F)
+			.zombieModel(() -> () -> new EdgarRobotModel(EdgarRobotModel.createBodyLayer().bakeRoot())).scale(1.6F)
 			.loot(PVZLoot.EDGAR_090505)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 
 	public static final ZombieType EDGAR_090517 = new RoofZombies("edgar_090517", new ZombieFeatures()
 			.rank(RankTypes.MEGA).xp(2000)
 			.entityType(() -> EntityRegister.EDGAR_090517.get())
-			.zombieModel(() -> EdgarRobotModel::new).scale(2F)
+			.zombieModel(() -> () -> new EdgarRobotModel(EdgarRobotModel.createBodyLayer().bakeRoot())).scale(2F)
 			.loot(PVZLoot.EDGAR_090517)
-			.commonSkill(Arrays.asList())
+			.commonSkill(List.of())
 	);
 	
 	public static void register() {
