@@ -21,57 +21,57 @@ public final class Zombotanies extends ZombieType {
 	public static final ZombieType PEASHOOTER_ZOMBIE = new Zombotanies("peashooter_zombie", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(8)
 			.entityType(() -> EntityRegister.PEASHOOTER_ZOMBIE.get())
-			.zombieModel(() -> PeaShooterZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new PeaShooterZombieModel(PeaShooterZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.PEASHOOTER_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType WALLNUT_ZOMBIE = new Zombotanies("wallnut_zombie", new ZombieFeatures()
 		    .rank(RankTypes.GREEN).xp(25)
 			.entityType(() -> EntityRegister.WALLNUT_ZOMBIE.get())
-			.zombieModel(() -> WallNutZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new WallNutZombieModel(WallNutZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.WALLNUT_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType GATLINGPEA_ZOMBIE = new Zombotanies("gatlingpea_zombie", new ZombieFeatures()
 		    .rank(RankTypes.PURPLE).xp(10)
 			.entityType(() -> EntityRegister.GATLINGPEA_ZOMBIE.get())
-			.zombieModel(() -> GatlingPeaZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new GatlingPeaZombieModel(GatlingPeaZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.GATLINGPEA_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType SQUASH_ZOMBIE = new Zombotanies("squash_zombie", new ZombieFeatures()
 		    .rank(RankTypes.BLUE).xp(10)
 			.entityType(() -> EntityRegister.SQUASH_ZOMBIE.get())
-			.zombieModel(() -> SquashZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new SquashZombieModel(SquashZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.SQUASH_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType JALAPENO_ZOMBIE = new Zombotanies("jalapeno_zombie", new ZombieFeatures()
 		    .rank(RankTypes.GOLD).xp(12)
 			.entityType(() -> EntityRegister.JALAPENO_ZOMBIE.get())
-			.zombieModel(() -> JalapenoZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new JalapenoZombieModel(JalapenoZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.JALAPENO_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType TALLNUT_ZOMBIE = new Zombotanies("tallnut_zombie", new ZombieFeatures()
 		    .rank(RankTypes.PURPLE).xp(36)
 			.entityType(() -> EntityRegister.TALLNUT_ZOMBIE.get())
-			.zombieModel(() -> TallNutZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new TallNutZombieModel(TallNutZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.TALLNUT_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static final ZombieType PUMPKIN_ZOMBIE = new Zombotanies("pumpkin_zombie", new ZombieFeatures()
 		    .rank(RankTypes.PURPLE).xp(33)
 			.entityType(() -> EntityRegister.PUMPKIN_ZOMBIE.get())
-			.zombieModel(() -> PumpkinZombieModel::new).scale(0.5F)
+			.zombieModel(() -> () -> new PumpkinZombieModel(PumpkinZombieModel.createBodyLayer().bakeRoot())).scale(0.5F)
 			.loot(PVZLoot.PUMPKIN_ZOMBIE)
-			.eatCommonSkill(Arrays.asList())
+			.eatCommonSkill(List.of())
 	);
 	
 	public static void register() {
